# typedown

./: .gitignore  Cargo.toml  README.md
crates/td-ast/: Cargo.toml
crates/td-ast/src/: lib.rs  md.rs  td.rs
crates/td-check/: Cargo.toml
crates/td-check/src/: compose.rs  effects.rs  env.rs  extract.rs  frontmatter.rs  lib.rs  rules.rs  schema.rs  value.rs
crates/td-check/tests/: integration.rs
crates/td-cli/: Cargo.toml
crates/td-cli/src/: main.rs
crates/td-codegen/: Cargo.toml
crates/td-codegen/src/: ai_sdk.rs  lib.rs  naming.rs  prompt.rs  zod.rs
crates/td-codegen/tests/: ai_sdk.rs
crates/td-core/: Cargo.toml
crates/td-core/src/: lib.rs
crates/td-lsp/: Cargo.toml
crates/td-lsp/src/: completion.rs  diagnostics.rs  hover.rs  inlay.rs  lib.rs  line_index.rs  resolver.rs  semantic.rs  server.rs  state.rs  stdlib_cache.rs  symbol.rs  watcher.rs
crates/td-lsp/tests/: diagnostics.rs
crates/td-parse/: Cargo.toml
crates/td-parse/src/: lib.rs  markdown.rs  td_dsl.rs
crates/td-runtime/: Cargo.toml
crates/td-runtime/src/: lib.rs
crates/td-stdlib/: Cargo.toml
crates/td-stdlib/src/: lib.rs
examples/: code_reviewer_prompt.md  code_reviewer_prompt_broken.md  support_pipeline.md  support_pipeline_broken.md  support_triage.md  support_triage.workflow.ts
