[package]
name = "td-check"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
td-core = { workspace = true }
td-ast = { workspace = true }
td-parse = { workspace = true }
td-stdlib = { workspace = true }
serde_yaml = { workspace = true }
