[package]
name = "td-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Compile typed markdown documents to executable runtime code (Vercel AI SDK, etc.)"

[dependencies]
td-core = { workspace = true }
td-ast = { workspace = true }
td-parse = { workspace = true }
td-check = { workspace = true }
td-stdlib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
