[package]
name = "td-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Runtime enforcement of typedown effect rows and I/O schemas."

[dependencies]
td-core = { workspace = true }
td-ast = { workspace = true }
td-parse = { workspace = true }
td-check = { workspace = true }
td-stdlib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
globset = { workspace = true }
thiserror = { workspace = true }
